--- a/estilo.css
+++ b/estilo.css
@@ -20,7 +20,7 @@ html,body, .capa{
   	            linear-gradient(50deg,#ff4169, #7c26f8);
   	background-attachment: fixed; 
   	font-family: Arial, Helvetica, sans-serif;
-  	
+  	overflow-x: hidden;
   	
   	
 
