--- a/estilo.css
+++ b/estilo.css
@@ -202,6 +202,10 @@ h3{
 /* xs < 768 */
 @media screen and (max-width: 767px){
 
+	html,body, .capa{
+	height: 100%;
+	overflow-x: hidden;
+   }
 
  h1{
  	font-size: 50px;
