--- a/estilo.css
+++ b/estilo.css
@@ -21,7 +21,8 @@ html,body, .capa{
   	background-attachment: fixed; 
   	font-family: Arial, Helvetica, sans-serif;
   	overflow-x: hidden;
-	overflow: auto;  
+	overflow-y: visible;
+	
   	
 }
 
