--- a/estilo.css
+++ b/estilo.css
@@ -21,7 +21,7 @@ html,body, .capa{
   	background-attachment: fixed; 
   	font-family: Arial, Helvetica, sans-serif;
   	overflow-x: hidden;
-	overflow-y: visible;
+	
 	
   	
 }
@@ -41,7 +41,7 @@ html,body, .capa{
 
 nav.navbar-transparente{
 	padding: 15px 0px;
-	background: rgb(0,0,0,0.6); 
+	background: rgba(0,0,0,0.8); 
 	border: none;
 
 }
