--- a/estilo.css
+++ b/estilo.css
@@ -206,9 +206,9 @@ h3{
 @media screen and (max-width: 767px){
 	
 	
-	html,body,.capa{
+	body,.capa{
 	height: 100%; 
-	overflow-y:scroll;	
+	overflow-auto; 	
 
 }
 	
